--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://asset.commilitia.net/Font/CSS/fonts.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,8 +16,13 @@
   }
 }
 
+progress, meter, datalist, samp, kbd, pre, pre *, code, code * {
+  font-family: "MonoLisa Commilitia", "Sarasa UI SC", sans-serif;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Sarasa UI SC", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
